# plug

./: CMakeLists.txt
include/: detour.hpp  logger.hpp  module.hpp  modules.hpp  plug.hpp  scanner.hpp  singleton.hpp  util.hpp
src/: entry.cpp  logger.cpp  modules.cpp  plug.cpp  scanner.cpp
